fix arrow by adding some extra margin

--- a/web/app/style/oppija-haku.less
+++ b/web/app/style/oppija-haku.less
@@ -25,6 +25,8 @@
         position: relative;
         height: 49px;
         a {
+          z-index: 1;
+          position: relative;
           padding-left: 9px;
           line-height: 49px;
           display: inline-block;
@@ -40,10 +42,10 @@
         }
         &:after {
           content: "";
-          .Triangle(12px, @color-blue, left);
+          .Triangle(20px, @color-blue, left);
           position: absolute;
-          bottom: 12px;
-          right: -24px;
+          bottom: 4px;
+          right: -32px;
         }
       }
     }
